k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api
spec:
  selector:
    app: pegelogo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
