k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - host: api.164.90.246.125.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-service
            port: 
              number: 80
  
  ingressClassName: nginx
